fix sidebar collapse

--- a/src/main/aurigauikit/style/ant-override.less
+++ b/src/main/aurigauikit/style/ant-override.less
@@ -223,3 +223,10 @@ label .ant-select {
 .ant-select-multiple .ant-select-selector {
   padding-left: 3px;
 }
+
+.ant-menu-submenu-arrow::before {
+  background-color: white;
+}
+.ant-menu-submenu-arrow::after {
+  background-color: white;
+}
